--- a/server/views/main.pug
+++ b/server/views/main.pug
@@ -1,1 +1,35 @@
 extends layouts/main-layout
+
+block headTitle
+    title MRP by deksden
+
+block bodyContent
+    .content
+        .card
+            .card-header
+                h3 MRP by Deksden
+
+            .card-body
+                .card(style='width: 20rem;')
+                    .card-body
+                        h4.card-title Products
+                        h6.card-subtitle.mb-2.text-muted Products definition
+                        p.card-text
+                            | Description of products which manufacturing plan will be processed by MRP. products.json
+                        a.card-link(href='/erp/products') Products
+
+                .card(style='width: 20rem;')
+                    .card-body
+                        h4.card-title Products
+                        h6.card-subtitle.mb-2.text-muted Products definition
+                        p.card-text
+                            | Description of products which manufacturing plan will be processed by MRP. products.json
+                        a.card-link(href='/erp/products') Products
+
+                .card(style='width: 20rem;')
+                    .card-body
+                        h4.card-title Products
+                        h6.card-subtitle.mb-2.text-muted Products definition
+                        p.card-text
+                            | Description of products which manufacturing plan will be processed by MRP. products.json
+                        a.card-link(href='/erp/products') Products
