--- a/server/views/partials/body-sidebar.pug
+++ b/server/views/partials/body-sidebar.pug
@@ -3,18 +3,19 @@
       Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
       Tip 2: you can also add an image using data-image tag
     .logo
-        a.simple-text.logo-mini(href='http://www.creative-tim.com')
-            | CT
-        a.simple-text.logo-normal(href='http://www.creative-tim.com')
-            | Creative Tim
+        a.simple-text.logo-mini(href='http://www.biomatrix.pro')
+            | BMX
+        a.simple-text.logo-normal(href='http://www.biomatrix.pro')
+            | Biomatrix
         .navbar-minimize
             button#minimizeSidebar.btn.btn-simple.btn-icon.btn-neutral.btn-round
                 i.now-ui-icons.text_align-center.visible-on-sidebar-regular
                 i.now-ui-icons.design_bullet-list-67.visible-on-sidebar-mini
+
     .sidebar-wrapper
         .user
             .photo
-                img(src='../assets/img/mike.jpg')
+                img.avatar(src='../assets/img/james.jpg')
             .info
                 a.collapsed(data-toggle='collapse' href='#collapseExample')
                     span
