--- a/server/views/partials/body-navpanel.pug
+++ b/server/views/partials/body-navpanel.pug
@@ -15,7 +15,7 @@ nav.navbar.navbar-expand-lg.navbar-transparent.navbar-absolute.bg-primary.fixed-
             form
                 .input-group.no-border
                     input.form-control(type='text' value='' placeholder='Search...')
-                    .input-group-append
+                    .input-group-addon
                         .input-group-text
                             i.now-ui-icons.ui-1_zoom-bold
             ul.navbar-nav
