--- a/server/views/orders.pug
+++ b/server/views/orders.pug
@@ -6,7 +6,7 @@ block headTitle
     title MRP by deksden
 
 block bodyContent
-    +erpTable('Orders')
+    +erpTable('Orders', orders)
         thead.text-primary
             tr.col-md-8
                 th.text-left Res
