--- a/server/views/partials/body-navpanel.pug
+++ b/server/views/partials/body-navpanel.pug
@@ -6,7 +6,7 @@ nav.navbar.navbar-expand-lg.navbar-transparent.navbar-absolute.bg-primary.fixed-
                     span.navbar-toggler-bar.bar1
                     span.navbar-toggler-bar.bar2
                     span.navbar-toggler-bar.bar3
-            a.navbar-brand(href='#pablo') Dashboard
+            a.navbar-brand(href='/') MRP
         button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navigation' aria-controls='navigation-index' aria-expanded='false' aria-label='Toggle navigation')
             span.navbar-toggler-bar.navbar-kebab
             span.navbar-toggler-bar.navbar-kebab
@@ -20,7 +20,7 @@ nav.navbar.navbar-expand-lg.navbar-transparent.navbar-absolute.bg-primary.fixed-
                             i.now-ui-icons.ui-1_zoom-bold
             ul.navbar-nav
                 li.nav-item
-                    a.nav-link(href='#pablo')
+                    a.nav-link(href='#')
                         i.now-ui-icons.media-2_sound-wave
                         p
                             span.d-lg-none.d-md-block Stats
