- (fix) theme: fixed sidebar navigation & active item selection (according to pageID)

--- a/server/views/main.pug
+++ b/server/views/main.pug
@@ -1,7 +1,10 @@
 extends layouts/main-layout
 
+block append variables
+    - pageID = 'home'
+
 block headTitle
-    title MRP by deksden
+    title MRP by deksden (#{pageID})
 
 block bodyContent
     .content
