--- a/server/views/orders.pug
+++ b/server/views/orders.pug
@@ -1,9 +1,12 @@
 extends layouts/main-layout
 
+block append variables
+    - pageID = 'orders'
+
 include mixins/table
 
 block headTitle
-    title MRP by deksden
+    title MRP by deksden (#{pageID})
 
 block bodyContent
     +erpTable('Orders', orders)
