--- a/server/views/partials/body-footer.pug
+++ b/server/views/partials/body-footer.pug
@@ -3,23 +3,12 @@ footer.footer
     nav
       ul
         li
-          a(href='https://www.creative-tim.com')
-            | Creative Tim
-        li
-          a(href='http://presentation.creative-tim.com')
-            | About Us
-        li
-          a(href='http://blog.creative-tim.com')
-            | Blog
-        li
-          a(href='https://github.com/creativetimofficial/now-ui-dashboard/blob/master/LICENSE.md')
-            | MIT License
+          a(href='http://www.biomatrix.pro' target='_blank')
+            | Our official site
     .copyright
       | &copy;
       script.
         document.write(new Date().getFullYear())
-      | , Designed by
-      a(href='http://www.invisionapp.com' target='_blank') Invision
-      | . Coded by
-      a(href='https://www.creative-tim.com' target='_blank') Creative Tim
-      | .
+      | , by
+      span=' '
+      a(href='http://www.deksden.com' target='_blank') Deksden
