--- a/server/views/partials/body-sidebar.pug
+++ b/server/views/partials/body-sidebar.pug
@@ -1,3 +1,8 @@
+mixin navItem(itemID)
+    li(class=(pageID === itemID ? 'active' : ''))
+        if block
+            block
+
 .sidebar(data-color='orange')
     //
       Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
@@ -13,7 +18,7 @@
                 i.now-ui-icons.design_bullet-list-67.visible-on-sidebar-mini
 
     .sidebar-wrapper
-        .user
+        //.user
             .photo
                 img.avatar(src='../assets/img/james.jpg')
             .info
@@ -37,23 +42,15 @@
                                 span.sidebar-mini-icon S
                                 span.sidebar-normal Settings
         ul.nav
-            li.active
-                a(href='../examples/dashboard.html')
+            +navItem('home')
+                a(href='/')
                     i.now-ui-icons.design_app
-                    p Example 1
-            li
-                a(data-toggle='collapse' href='#pagesExamples')
-                    i.now-ui-icons.design_image
-                    p
-                        | Example 2
-                        b.caret
-                #pagesExamples.collapse
-                    ul.nav
-                        li
-                            a(href='../examples/pages/pricing.html')
-                                span.sidebar-mini-icon C1
-                                span.sidebar-normal Collapse 1
-                        li
-                            a(href='../examples/pages/timeline.html')
-                                span.sidebar-mini-icon C2
-                                span.sidebar-normal Collapse 2
+                    p MRP home page
+            +navItem('products')
+                a(href='/erp/products')
+                    i.now-ui-icons.files_paper
+                    p.sidebar-normal Products
+            +navItem('orders')
+                a(href='/erp/orders')
+                    i.now-ui-icons.files_paper
+                    p.sidebar-normal Orders
