--- a/server/views/products.pug
+++ b/server/views/products.pug
@@ -1,9 +1,12 @@
 extends layouts/main-layout
 
+block append variables
+  - pageID = 'products'
+
 include mixins/table
 
 block headTitle
-    title MRP by deksden
+    title MRP by deksden (#{pageID})
 
 block bodyContent
   +erpTable('Products',products)
