- (enh) theming: product page themed

--- a/server/views/orders.pug
+++ b/server/views/orders.pug
@@ -6,7 +6,7 @@ block append variables
 include mixins/table
 
 block headTitle
-    title MRP by deksden (#{pageID})
+    title MRP by deksden
 
 block bodyContent
     +erpTable('Orders', orders)
