--- a/server/views/partials/body-sidebar.pug
+++ b/server/views/partials/body-sidebar.pug
@@ -50,6 +50,10 @@ mixin navItem(itemID)
                 a(href='/erp/products')
                     i.now-ui-icons.files_paper
                     p.sidebar-normal Products
+            +navItem('resources')
+                a(href='/erp/resources')
+                    i.now-ui-icons.files_paper
+                    p.sidebar-normal Resources
             +navItem('orders')
                 a(href='/erp/orders')
                     i.now-ui-icons.files_paper
