- (fix) theming: fixes for product view

--- a/server/views/main.pug
+++ b/server/views/main.pug
@@ -13,29 +13,26 @@ block bodyContent
                 h3 MRP by Deksden
 
             .card-body
-                .container
-                    .row
-                        .card(style='width: 18rem')
+                    .card-group.w-50
+                        .card
                             .card-header
                                 h4.card-title Products
                                 h6.card-subtitle.mb-2.text-muted Products definition
                             .card-body
-                                p.card-text
-                                    | Description of products which manufacturing plan will be processed by MRP. products.json
+                                p.card-text Description of products which manufacturing plan will be processed by MRP. products.json
                             .card-footer
-                                a.card-link(href='/erp/products') Products
+                                a(href='/erp/products') Products
 
-                        .card(style='width: 18rem')
+                        .card
                             .card-header
                                 h4.card-title Resources
                                 h6.card-subtitle.mb-2.text-muted Resources for production
                             .card-body
-                                p.card-text
-                                    | Definition of resources used for production processes
+                                p.card-text Definition of resources used for production processes
                             .card-footer
-                                a.card-link(href='/erp/resources') Resources
+                                a(href='/erp/resources') Resources
             .card-body
-                .card(style='width: 18rem')
+                .card.w-25
                     .card-header
                         h4.card-title Orders
                         h6.card-subtitle.mb-2.text-muted Orders for resources
