- (enh) theming: manufacturing plan themed

--- a/server/views/main.pug
+++ b/server/views/main.pug
@@ -13,7 +13,16 @@ block bodyContent
                 h3 MRP by Deksden
 
             .card-body
-                    .card-group.w-50
+                    .card-group.w-75
+                        .card
+                            .card-header
+                                h4.card-title Plan
+                                h6.card-subtitle.mb-2.text-muted Manufacturing plan
+                            .card-body
+                                p.card-text List of products to manufature
+                            .card-footer
+                                a(href='/erp/manufacturing') Manufacturing
+
                         .card
                             .card-header
                                 h4.card-title Products
