- (enh) server: processes list implemented - controller, routes, themed view

--- a/server/views/main.pug
+++ b/server/views/main.pug
@@ -13,6 +13,17 @@ block bodyContent
                 h3 MRP by Deksden
 
             .card-body
+                .card.w-25
+                    .card-header
+                        h4.card-title Processes
+                        h6.card-subtitle.mb-2.text-muted Processed definitions
+                    .card-body
+                        p.card-text
+                            | List of manufacturing processes
+                    .card-footer
+                        a.card-link(href='/erp/processes') Processes
+
+            .card-body
                     .card-group.w-75
                         .card
                             .card-header
