- (enh) server: process view implemented

--- a/server/views/mixins/form-field.pug
+++ b/server/views/mixins/form-field.pug
@@ -3,4 +3,8 @@ mixin formField(caption, value)
         .col-md-2
             p.text-muted.text-right=caption
         .col-md-10
-            p.text-left=value
+            if block
+                block
+            else
+                p.text-left=value
+
