--- a/server/views/layouts/main-layout.pug
+++ b/server/views/layouts/main-layout.pug
@@ -71,3 +71,5 @@ body
         script(src=`${assetsPath}js/plugins/bootstrap-notify.js`)
         // Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc
         script(src=`${assetsPath}js/now-ui-dashboard.js?v=1.1.0` type='text/javascript')
+
+    block bodyJS
